                           _          _        _    
                          | |    ___ | |      / \   
                          | |   / _ \| |     / _ \  
                          | |__| (_) | |___ / ___ \ 
                          |_____\___/|_____/_/   \_\
                     http://service-technology.org/lola


Version 1.14-unreleased
=======================

* whenever a SCC representative is found, all members (excluding the
  representative) of SCC are now printed out when directive STATESPACE is used

Version 1.13
============

* fixed a small bug in the `PREDUCTION' mode: nets without significant places
  are now analyzed instantly

* added new scripts to build binary releases

* a binary release consists of the following pre-configured LoLAs: lola-full,
  lola-full1, lola-deadlock, lola-deadlock1, lola-modelchecking,
  lola-boundednet, lola-liveprop, lola-liveprop1, lola-statepredicate, and
  lola-statepredicate1

* changed the way tests are run (using GNU Autotest now)

Version 1.12
============

* addressed bug #13538 (`https://gna.org/bugs/?13538'): `make install'
  installs all binaries with the name `lola' or `lola-xxx' for a standard
  configuration `userconfig.H.xxx' that are present in the `src' folder.
  Likewise, `make uninstall' removes all installed binaries with the name
  `lola' or `lola-xxx' for a standard configuration `userconfig.H.xxx'

* adjusted the parser to cope with different line endings (CR, LF, CRLF)

* licensed LoLA under the GNU Affero General Public License (Affero GPL), see
  file `COPYING'

Version 1.11
============

* fixed bug #12903 (`https://gna.org/bugs/?12903'): fixed problems regarding
  `BOUNDEDNET' mode

* fixed bug #12907 (`https://gna.org/bugs/?12907'): fixed problems regarding
  `COVER' option

* completed documentation

* adapted code to avoid deprecation warnings of GCC 4.2

* updated `-h' output

* removed old manual `lola-old.ps' from documentation
