@@ -9,8 +9,13 @@
 Version 1.14-unreleased
 =======================
 
+* fixed bug #14295 (see `https://gna.org/bugs/?14295'): Place is ignored in
+  marking output; isolated places are not removed when using directive
+  STATESPACE
+
 * whenever a SCC representative is found, all members (excluding the
-  representative) of SCC are now printed out when directive STATESPACE is used
+  representative) of the current SCC are now printed out when directive
+  STATESPACE is used
 
 Version 1.13
 ============
